<resources>
    <string name="app_name">Xceed</string>
    <string name="title_home">Profil</string>
    <string name="title_chrono">Chronometre</string>
    <string name="title_exercice">Exercices</string>
    <string name="title_entrainements">Entrainements</string>
    <string name="modifier">modifier</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="setFormat">Set Format</string>
    <string name="clearFormat">Clear Format</string>
    <string name="chronometerInAndroid">Chrono</string>
    <string name="text_notifications">Chrono</string>
    <string name="description_ppl">PPL</string>
    <string name="description_fullbody">Full Body</string>
    <string name="description_halfbody">Half Body</string>
    <string name="description_split">Split</string>
    <string name="description_custom">Custom</string>
    <string name="fb_day1">Jour 1</string>
    <string name="fb_day2">Jour 2</string>
    <string name="fb_day3">Jour 3</string>
    <string name="split_day1">Jour 1</string>
    <string name="split_day2">Jour 2</string>
    <string name="split_day3">Jour 3</string>
    <string name="split_day4">Jour 4</string>
    <string name="split_day5">Jour 5</string>
    <string name="split_day6">Jour 6</string>
    <string name="hf_day1">Jour 1</string>
    <string name="hf_day2">Jour 2</string>
    <string name="hf_day3">Jour 3</string>
    <string name="hf_day4">Jour 4</string>
    <string name="ppl_day1">Jour 1</string>
    <string name="ppl_day2">Jour 2</string>
    <string name="ppl_day3">Jour 3</string>
    <string name="ppl_day4">Jour 4</string>
    <string name="ppl_day5">Jour 5</string>
    <string name="ppl_day6">Jour 6</string>
    <string name="lefting">Il vous reste : </string>
    <string name="setSsize">" Series restantes: "</string>
    <string name="repetitions">répétition(s)</string>
    <string name="open">ouvrir</string>
    <string name="add_fb">Full Body</string>
    <string name="add_hb">Half Body</string>
    <string name="add_ppl">PPL</string>
    <string name="add_split">Spllit</string>
    <string name="nb_serie">nombre de series</string>
    <string name="quitter">Quitter</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Lancer">LANCER</string>
    <string name="Supprimer">SUPPRIMER</string>


</resources>