<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.xceed.ui.profil.ProfilFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_Chronometre"
        android:name="com.example.xceed.ui.chronometre.ChronometreFragment"
        android:label="@string/title_chrono"
        tools:layout="@layout/fragment_chronometre" />

    <fragment
        android:id="@+id/navigation_exercices"
        android:name="com.example.xceed.ui.exercice.ExerciceFragment"
        android:label="@string/title_exercice"
        tools:layout="@layout/fragment_exercice" />

    <fragment
        android:id="@+id/navigation_entrainements"
        android:name="com.example.xceed.ui.entrainement."
        android:label="@string/title_entrainements"
        tools:layout="@layout/fragment_exercice" />
</navigation>