<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.entrainement.SplitActivity">


    <Button
        android:id="@+id/split_day1"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/simpleChronometer"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:text="@string/split_day1"


        />

    <Button
        android:id="@+id/split_day2"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/split_day1"
        android:layout_marginTop="32dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:text="@string/split_day2" />

    <Button
        android:id="@+id/split_day3"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/split_day2"
        android:layout_marginTop="54dp"
        android:padding="0dp"
        android:text="@string/split_day3" />

    <Button
        android:id="@+id/split_day4"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/split_day3"
        android:layout_marginTop="40dp"
        android:padding="0dp"
        android:text="@string/split_day4" />

    <Button
        android:id="@+id/split_day5"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/split_day4"
        android:layout_marginTop="41dp"
        android:padding="0dp"
        android:text="@string/split_day5" />

    <Button
        android:id="@+id/split_day6"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/split_day5"
        android:layout_marginTop="58dp"
        android:padding="0dp"
        android:text="@string/split_day6" />


</RelativeLayout>