<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.entrainement.HfActivity">


    <Button
        android:id="@+id/hf_day1"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/simpleChronometer"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:text="@string/hf_day1"


        />

    <Button
        android:id="@+id/hf_day2"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/hf_day1"
        android:layout_marginTop="130dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:text="@string/hf_day2" />

    <Button
        android:id="@+id/hf_day3"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/hf_day2"
        android:layout_marginTop="117dp"
        android:padding="0dp"
        android:text="@string/hf_day3" />

    <Button
        android:id="@+id/hf_day4"
        android:layout_width="700dp"
        android:layout_height="70dp"
        android:layout_below="@+id/hf_day3"
        android:layout_marginTop="154dp"
        android:padding="0dp"
        android:text="@string/hf_day4" />


</RelativeLayout>