<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.exercice.ExerciceFragment"
    android:background="@drawable/grad">






    <Button
        android:id="@+id/add_fb"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:text="@string/add_fb" />

    <Button
        android:id="@+id/add_hb"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/add_fb"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/add_hb" />
    <Button
        android:id="@+id/add_ppl"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/add_hb"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/add_ppl" />
    <Button
        android:id="@+id/add_split"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/add_ppl"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/add_split" />




</RelativeLayout>